--- a/.github/workflows/profile-3d-contrib.yml
+++ b/.github/workflows/profile-3d-contrib.yml
@@ -1,1 +1,30 @@
+name: Generate 3D Contribution Graph
 
+on:
+  schedule:
+    - cron: '0 0 * * *' # Runs daily at midnight
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: GitHub-Profile-3D-Contrib
+        uses: yoshi389111/github-profile-3d-contrib@0.7.1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          username: ericemdev
+          background: "black" # Change background color
+          color: "green" # Change contribution color
+          size: "800x400" # Change image size
+
+      - name: Commit and Push
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add -A
+          git commit -m "Update 3D Contribution Graph"
+          git push
