--- a/.github/workflows/profile-3d-contrib.yml
+++ b/.github/workflows/profile-3d-contrib.yml
@@ -1,9 +1,12 @@
 name: Generate 3D Contribution Graph
 
 on:
+  push:  # Runs the workflow when you push code
+    branches:
+      - main
   schedule:
     - cron: '0 0 * * *' # Runs daily at midnight
-  workflow_dispatch:
+  workflow_dispatch: # Allows you to manually trigger the workflow
 
 jobs:
   build:
