--- a/.github/workflows/profile-3d-contrib.yml
+++ b/.github/workflows/profile-3d-contrib.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Generate 3D Contribution Graph
         uses: yoshi389111/github-profile-3d-contrib@0.7.1
         with:
-          USERNAME: "ericemdev"
+          USERNAME: "E-kigai"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
